# Scout

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/agent/: __init__.py  graph.py  state.py
app/agent/nodes/: __init__.py  decompose.py  evaluate.py  search.py  synthesise.py
app/agent/tools/: tavily.py
app/schemas/: research.py
app/utils/: config.py  prompts.py
examples/: anthropic-2026.md
frontend/: index.html  script.js  style.css
