[project]
name = "scout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "langchain-tavily>=0.2.18",
    "tavily>=1.1.0",
]
